@@ -5,8 +5,8 @@
 
 ;; Author: NAKAJIMA Mikio <minakaji@osaka.email.ne.jp>
 ;; Maintainer: SKK Development Team <skk@ring.gr.jp>
-;; Version: $Id: SKK-MK,v 1.84 2001/09/16 09:16:06 czkmt Exp $
-;; Last Modified: $Date: 2001/09/16 09:16:06 $
+;; Version: $Id: SKK-MK,v 1.85 2001/09/16 09:21:24 czkmt Exp $
+;; Last Modified: $Date: 2001/09/16 09:21:24 $
 
 ;; Commentary
 ;;
@@ -256,7 +256,7 @@ Try ddskk-e18 branch."))
 	       skk-cursor skk-server skk-tut skk-version
 	       skk-abbrev skk-dcomp skk-annotation
 	       skk-jisx0201
-	       ;; skk-dic
+	       skk-dic
 
 	       ;; EXPERIMENTAL
 	       skk-rdbms skk-study
@@ -481,7 +481,8 @@ Try ddskk-e18 branch."))
 
 (defun SKK-MK-compile ()
   (let (enable-local-eval)
-    (SKK-MK-skk-dic)
+    (unless (file-exists-p (expand-file-name "skk-dic.el"))
+      (SKK-MK-skk-dic))
     (SKK-MK-generate-autoloads-el)
     (require 'skk-autoloads
 	     (expand-file-name "skk-autoloads.el"))
@@ -500,7 +501,8 @@ Try ddskk-e18 branch."))
 	   (SKK-MK-texinfo-format SKK_TEXIS))))
 
 (defun SKK-MK-compile-package ()
-  (SKK-MK-skk-dic)
+  (unless (file-exists-p (expand-file-name "skk-dic.el"))
+    (SKK-MK-skk-dic))
   (SKK-MK-generate-autoloads-el-package)
   (require 'skk
 	   (expand-file-name "skk.el"))
@@ -1038,8 +1040,6 @@ SKK tutorials:
 		 ((file-readable-p jisyo3)
 		  jisyo3))))
     (cond
-     ((file-exists-p (expand-file-name "skk-dic.el"))
-      nil)
      (jisyo
       (princ (format "Processing %s...
 "
