@@ -1,5 +1,11 @@
 2001-09-16  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
 
+	* Makefile (clean): No, don't skk-dic.el.
+
+	* SKK-MK: Keep skk-dic.el.
+
+2001-09-16  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>
+
 	* skk-dic.el: No longer in the repository.
 
 	* skk-dic.el.in: New file.
@@ -1988,8 +1994,8 @@
 
 
 
-Version: $Id: ChangeLog,v 1.409 2001/09/16 08:35:15 czkmt Exp $
-Last Modified: $Date: 2001/09/16 08:35:15 $
+Version: $Id: ChangeLog,v 1.410 2001/09/16 09:21:23 czkmt Exp $
+Last Modified: $Date: 2001/09/16 09:21:23 $
 
 Local Variables:
 buffer-file-coding-system: iso-2022-jp
